# TRACE

./: .gitignore  pyproject.toml
config/: config.yaml
notebooks/: 01_data_collection.ipynb  02_eda.ipynb  03_feature_engineering.ipynb  04_model_training.ipynb  05_model_evaluation.ipynb  06_explainability_and_insights.ipynb
src/data/: collector.py  normal_filter.py  preprocessor.py  sequencer.py
src/explainability/: shap_explainer.py
src/features/: engineer.py
src/models/: cost_engine.py  lstm_vae.py  trainer.py
src/monitoring/: alerting.py  drift_detector.py
src/pipeline/: daily_runner.py
