[project]
name            = "trace"
version         = "0.1.0"
description     = "Temporal Reconstruction & Anomaly Cost Engine"
requires-python = ">=3.11"

dependencies = [
    "yfinance==0.2.66",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "torch==2.3.0",
    "mlflow==2.13.0",
    "shap==0.45.1",
    "PyYAML==6.0.1",
    "matplotlib==3.9.0",
    "seaborn==0.13.2",
    "plotly==5.22.0",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.0",
    "sqlalchemy==2.0.30",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "pyjwt[crypto]==2.8.0",
    "bcrypt==4.1.3",
    "python-multipart==0.0.9",
    "pydantic-settings==2.2.1",
    "email-validator==2.1.1",
    "setuptools>=69.0.0,<81",
    "pip==24.0",
]

[dependency-groups]
dev = [
    "pytest==8.2.0",
    "black==24.4.2",
    "ruff==0.4.4",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "api"]

[tool.ruff]
line-length    = 100
target-version = "py311"
